[workspace.package]
version = "3.10.0"

[workspace]
resolver = "2"

members = [
  "./sils-runtime",
  "./Library/bind-utils",

  "./hal/i2c_noop",
  "./hal/spi_noop",
  "./hal/uart_noop",
  "./hal/wdt_noop",
]

[workspace.dependencies]
c2a-core = { path = "." }

[package]
name = "c2a-core"
version.workspace = true
edition = "2021"

links = "c2a-core"

description = "Core of Command Centric Architecture"
readme = "README.md"
license = "MIT"

repository = "https://github.com/arkedge/c2a-core"
documentation = "https://ut-issl.github.io/c2a-reference/c2a-core"

[lib]
path = "c2a_core.rs"

[features]
default = ["clang-runtime"]
std = []
export-src = ["std"]
clang-runtime = ["clang/runtime"]
no-c2a-link = []

[build-dependencies]
semver = "1.0.18"
clang = "2.0.0"
c2a-bind-utils = { path = "./Library/bind-utils" }

[dev-dependencies]
# unit test 時に libC2A.a を要求しないようにする
c2a-core = { path = ".", features = ["no-c2a-link"] }
