[workspace.package]
version = "4.5.0"
repository = "https://github.com/arkedge/c2a-core"

[workspace]
resolver = "2"

members = [
  "./dev-runtime",
  "./library/bind-utils",

  "./hal/i2c-noop",
  "./hal/spi-noop",
  "./hal/uart-noop",
  "./hal/wdt-noop",

  "./hal/uart-kble",

  "./examples/mobc",
  "./examples/subobc",
]

[workspace.dependencies]
c2a-core = { path = "." }
c2a-bind-utils = { path = "./library/bind-utils" }

c2a-dev-runtime = { path = "./dev-runtime" }
c2a-wdt-noop = { path = "./hal/wdt-noop" }
c2a-uart-kble = { path = "./hal/uart-kble" }

[package]
name = "c2a-core"
version.workspace = true
edition = "2021"
rust-version = "1.81.0"

description = "Core of Command Centric Architecture"
readme = "README.md"
license = "MIT"

repository.workspace = true
documentation = "https://ut-issl.github.io/c2a-reference/c2a-core"

[lib]
path = "c2a_core.rs"

[features]
default = ["clang-runtime"]
std = []
export-src = ["std"]
clang-runtime = ["clang/runtime"]
no-c2a-link = []

[build-dependencies]
semver = "1.0.22"
clang = "2.0.0"
c2a-bind-utils = "4.0.0-beta.0"

[dev-dependencies]
# unit test 時に libC2A.a を要求しないようにする
c2a-core = { path = ".", features = ["no-c2a-link"] }
